<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.business.cacoguaa.business.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView android:text="@string/choose_menu" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/header_margin"
            android:paddingRight="@dimen/header_margin"
            android:paddingLeft="@dimen/header_margin"
            android:paddingBottom="@dimen/header_bottom_margin"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:gravity="clip_horizontal" />

        <Button
            android:id="@+id/button_add_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add_business" />

        <Button
            android:id="@+id/button_edit_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_edit_business" />

        <Button
            android:id="@+id/button_delete_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete_business" />

        <Button
            android:id="@+id/button_view_businesses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_view_businesses" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
